--- a/src/styles.scss
+++ b/src/styles.scss
@@ -342,8 +342,8 @@ app-sound-config {
   color: #007bb5;
 }
 
-.whatsapp-color {
-  color: #0d9f16;
+.github-color {
+  color: #FFFFFF;
 }
 
 .gmail-color {
