Arrumando SCSS contacts

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -54,11 +54,11 @@
     padding: 0;
     .contact-informations {
       img {
-        width: 10vw;
+        width: 9vw;
       }
 
       p {
-        font-size: 18px;
+        font-size: 1.5vw;
       }
     }
   }
